--- a/templates/scoregolang.html
+++ b/templates/scoregolang.html
@@ -11,6 +11,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
 <script>
+   
     if (!!window.EventSource) {
       var source = new EventSource('/events/');
       source.onmessage = function(e) {
@@ -88,6 +89,6 @@ body{
 </head>
 <body>
 
-<ul id="demo"></ul>
+<ul id="demo">美</ul>
 </body>
 </html>
